# launchpane

./: LICENSE  README.md  package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.app/: .gitignore
.github/workflows/: release.yml
app/: main.ts
prisma/: schema.prisma
prisma/migrations/20230705145256_init/: migration.sql
prisma/migrations/20230709120039_command_log_line/: migration.sql
prisma/migrations/20230709142750_index/: migration.sql
prisma/migrations/20230715061536_wal/: migration.sql
src/: app.css  app.d.ts  hooks.client.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20230709121113_ms_timestamp/: migration.sql
src-tauri/prisma/migrations/20230709121411_last_run/: migration.sql
src-tauri/prisma/migrations/20230709121536_last_run/: migration.sql
src-tauri/prisma/migrations/20230714161602_cascade_delete_logs/: migration.sql
src-tauri/prisma/migrations/20230721164548_init/: migration.sql
src-tauri/src/: errors.rs  events.rs  main.rs  process.rs  utils.rs
src-tauri/src/snapshots/: app__utils__get_midpoint_string-2.snap.new  app__utils__get_midpoint_string-3.snap.new  app__utils__get_midpoint_string-4.snap.new  app__utils__get_midpoint_string.snap.new
src/lib/: api.ts  bindings.ts  events.ts  platformData.ts  stores.ts  types.ts  utils.ts
src/lib/components/: ActivityLight.svelte  Button.svelte  Command.svelte  (+3 more)
src/routes/: +layout.svelte  +layout.ts  +page.ts
(+17 files in other folders)
