[workspace]
members = [
    "prisma-cli"
]

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["sqlite", "rspc", "migrations"] }
tokio = { version = "1.28.2", features = ["macros"] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }
specta = {version = "1.0.4", features = ["typescript"] }
async-process = "1.7.0"
futures-lite = "1.13.0"
nix = {version = "0.26.2", features = ["signal"] }
log = "0.4.19"
env_logger = "0.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
